# RecomandRestaurant

./: Langchain.py  NaverSearchAPI.py  Place.py  Scraping.py  Searchrestaurant.txt  app.py  googlemaptest.py  location.py  navermaptest.py  requirements.txt  tes.py  urlscrap.py
File/: pyvenv.cfg
File/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  jsondiff  jsonpatch  jsonpointer  numba
flutter_application/: pubspec.yaml
flutter_application/android/: build.gradle
flutter_application/android/app/: build.gradle
flutter_application/android/app/src/main/: AndroidManifest.xml
flutter_application/lib/: ChatWithGpt.dart  FindPath.dart  main.dart  setOnTapListener .dart
flutter_application/macos/Flutter/: GeneratedPluginRegistrant.swift
hello_new_python_project/: pyproject.toml
myproject/: db.sqlite3
myproject/myapp/: .env  Langchain.py  models.py  reverse_geocode.py  tes.py  urlscrap.py  views.py
myproject/myapp/migrations/: 0001_initial.py
myproject/myapp/templates/myapp/: chat_and_map.html  submit_info_form.html
myproject/myproject/: settings.py  urls.py
templates/: index.html
